# MSSH

./: .gitignore  .mssh_history  .msshrc  CMakeLists.txt  LICENSE  Makefile  ShellTest.c  cscd340Lab6.c  mssh  shellTest  test.txt
alias/: alias.c  alias.h
history/: history.c  history.h
linkedlist/: linkedList.c  linkedList.h  listUtils.c
pipes/: pipes.c  pipes.h
process/: process.c  process.h
tokenize/: makeArgs.c  makeArgs.h
utils/: myUtils.c  myUtils.h
